@@ -1,3 +1,9 @@
+2004-06-18  Sushma Rai  <rsushma@novell.com>
+
+	* addressbook/e-book-backend-exchange.c (proppatch_date): Freeing
+	the date entered only after forming the time stamp.
+	Fixes #60342
+ 
 2004-06-17  Sushma Rai  <rsushma@novell.com>
 
 	* addressbook/e-book-backend-exchange.c 
